--- a/announcements/templates/home.html
+++ b/announcements/templates/home.html
@@ -2,4 +2,9 @@
 
 {% block content %}
 <h1 id="head">Announcement admin</h1>
+<form action="{% url 'add_announcement' %}" method="POST" >
+    {{form}}
+    {%csrf_token%}
+    <input type="submit" name="submit" value="Add announcement">
+</form>
 {% endblock %}
