--- a/announcements/templates/home.html
+++ b/announcements/templates/home.html
@@ -12,6 +12,7 @@
     {% for announcement in announcements %}
         <p class="announcement_text">{{announcement.text}}</p>
         <a href="{% url 'delete_announcement' announcement.id %}" class="deleteButton">Delete</a>
+        <a href="{% url 'update_announcement' announcement.id %}" class="updateButton">Update</a>
     {% endfor%}
 {% endif %}
 {% endblock %}
